Update index.html  Akash Sachan

--- a/experiment/simulator/index.html
+++ b/experiment/simulator/index.html
@@ -1526,6 +1526,9 @@
         </div>
 
         <div id="frame18" style="display: none; font-size: 40px; background-color: dodgerblue;">
+		<div id="message" style="font-size: 16px; position: relative; text-align: center;">
+        		Note down the volume of <strong>CuSO<sub>4</sub></strong> against the <strong> average Optical density.</strong>
+        	</div>
             <button id="gr3" >PLOT GRAPH</button>
             <div id="gr" style=" background-color: dodgerblue;"></div>
              <button id="ideal" style="position: absolute;top: 500px; display: none;">Ideal graph</button>
